--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.h2.console.settings.web-allow-others=true
 spring.h2.console.path=/h2-console
+spring.servlet.multipart.max-file-size=30MB
+spring.servlet.multipart.max-request-size=30MB
